2024-09-12T00:50:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10822064780 # 416
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-12
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1324 / 851 1326
* notice: next accum: outdated-unq outdated-all / unq all: 849 1324 / 852 1327
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-11]

2024-09-07T00:48:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10747186361 # 411
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-07
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 848 1323 / 851 1326
* notice: next accum: outdated-unq outdated-all / unq all: 849 1324 / 851 1326
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-24] / []

2024-09-06T00:49:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10730461701 # 410
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-06
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 848 1323 / 850 1325
* notice: next accum: outdated-unq outdated-all / unq all: 848 1323 / 851 1326
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-05]

2024-09-04T00:49:24Z: