@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-12T00:50:01Z",
-  "count_outdated" : 1324,
-  "uniques_outdated" : 849,
+  "timestamp" : "2024-09-13T00:50:05Z",
+  "count_outdated" : 1325,
+  "uniques_outdated" : 850,
   "count" : 1327,
   "uniques" : 852,
   "clones" : [
-    {
-      "timestamp": "2024-08-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-05T00:00:00Z",
       "count": 1,
