@@ -1,3 +1,12 @@
+2024-09-13T00:50:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10841061398 # 417
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-13
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 849 1324 / 852 1327
+* notice: next accum: outdated-unq outdated-all / unq all: 850 1325 / 852 1327
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-08-30] / []
+
 2024-09-12T00:50:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10822064780 # 416
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-12
